# robot-based-large-scale-lidar-mapping

./: README.md
ROS2-PTU-Lidar-Sim/: .gitignore  README.md
ROS2-PTU-Lidar-Sim/src/mapping_applications/: CMakeLists.txt  package.xml
ROS2-PTU-Lidar-Sim/src/mapping_applications/include/: readme.MD
ROS2-PTU-Lidar-Sim/src/mapping_applications/mapping_applications/scripts/: pc2numpy.py  pc2numpy_low.py  pc2numpyfull.py
ROS2-PTU-Lidar-Sim/src/mapping_applications/src/: compute_normal.cpp  l360_scan_node.cpp  ply_converter.cpp  transform_lidar2world.cpp  world_scan_client.cpp  world_scan_server.cpp
ROS2-PTU-Lidar-Sim/src/mapping_bringup/: CMakeLists.txt  package.xml
ROS2-PTU-Lidar-Sim/src/mapping_bringup/config/: bridge.yaml  params.yaml
ROS2-PTU-Lidar-Sim/src/mapping_bringup/launch/: sample_ptu.launch.py  scan_dae.launch.py  scan_obj.launch.py  scan_stl.launch.py  start_scan.launch.py
ROS2-PTU-Lidar-Sim/src/mapping_custom_description/: CMakeLists.txt  package.xml
ROS2-PTU-Lidar-Sim/src/mapping_custom_description/models/dae/: model.config  model.sdf
ROS2-PTU-Lidar-Sim/src/mapping_custom_description/models/dae/meshes/: model_bck.dae  small_warehouse.dae
ROS2-PTU-Lidar-Sim/src/mapping_custom_description/models/depot/: model.sdf
ROS2-PTU-Lidar-Sim/src/mapping_custom_description/models/ptu_150cm/: model (copy).sdf  model.config  model.sdf  model_description.sdf  model_rviz.sdf  ptu_150cm.csv  ptu_150cm.urdf
ROS2-PTU-Lidar-Sim/src/mapping_custom_description/models/ptu_150cm/meshes/: base_link.STL  body_link.STL  imu_cf_link.STL  lidar_cf_link.STL  lidar_mid_link.STL  lidar_mid_link.dae  lidar_top_link.STL  lidar_top_link.dae  sensor_cf_link.STL  tripod115_link.STL  tripod150_link.STL
ROS2-PTU-Lidar-Sim/src/mapping_custom_description/models/stl/: model.config  model.sdf
ROS2-PTU-Lidar-Sim/src/mapping_custom_description/models/stl/meshes/: church.stl
ROS2-PTU-Lidar-Sim/src/mapping_gazebo/: CMakeLists.txt  package.xml
ROS2-PTU-Lidar-Sim/src/mapping_gazebo/include/mapping_gazebo/: BasicSystem.hh  FullSystem.hh  JointPositionControllerMod.hh  PtuCollision.hh  PtuFixedPosition.hh  PtuPose.hh
ROS2-PTU-Lidar-Sim/src/mapping_gazebo/src/: BasicSystem.cc  FullSystem.cc  JointPositionControllerMod.cc  PtuCollision.cc  PtuFixedPosition.cc  PtuPose.cc
ROS2-PTU-Lidar-Sim/src/mapping_gazebo/worlds/: ptu_lidar.sdf  test_world.sdf
ROS2-PTU-Lidar-Sim/src/mapping_interfaces/: CMakeLists.txt  package.xml
ROS2-PTU-Lidar-Sim/src/mapping_interfaces/msg/: PosLidar.msg  PosVel.msg  PrescalerMsg.msg  ScanStep.msg  ScanTransformedStep.msg
ROS2-PTU-Lidar-Sim/src/mapping_interfaces/srv/: ContMapSrv.srv  ControlPidStart.srv  L360MapSrv.srv  ModelPose.srv  PlatformVel.srv  RobotVel.srv  WorldDim.srv  WorldScan.srv
